welcome.lessons.welcome.bat.bool2.TeenSum.scala.error
teenSum:2: error: not found: value ||
  if ((a >= 13)&&(a <= 19))||((b >= 13)&&(b <= 19)){
                           ^